--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="page-spinner">
-        <div class="page-spinner__logo">Travis</div>
+        <div class="page-spinner__logo">Trivia</div>
         <div class="page-spinner__text">
           <div class="lds-roller">
             <div></div>
